<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_20"
    tools:context=".Activity.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_80"
                android:padding="@dimen/dp_5"

                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_envelope"

                    />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_marginTop="@dimen/dp_35"
                    android:gravity="center"
                    android:text="@string/verify_number"
                    android:textSize="@dimen/dp_21"
                    android:textStyle="bold"
                    android:textColor="@color/textcolor1"/>

                <TextView
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/phone_desc"
                    android:textSize="@dimen/dp_16"
                    android:textColor="@color/textcolor2"
                    app:fontFamily="@font/poppins"
                    />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirm"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_80"
                    android:text="@string/phone"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/textcolor2"
                    app:fontFamily="@font/poppins"/>

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_phone"
                    android:layout_marginRight="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_20"/>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_below="@+id/et_phone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_100"
                    android:background="@drawable/btn_background"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>